# mlx-lm-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
benches/: benchmark.rs
src/: cache.rs  chat_template.rs  config.rs  error.rs  generate.rs  lib.rs  loader.rs  main.rs  sample.rs  server.rs  stats.rs  tokenizer.rs
src/models/: mod.rs  qwen3.rs  rope.rs
tests/: parity_qwen3.rs
