[package]
name = "mlx-lm-rs"
version = "0.1.0"
edition = "2021"
description = "Greenfield Rust port of mlx-lm — Qwen3 inference on Apple Silicon via mlx-rs"

[[bin]]
name = "mlx-lm-rs"
path = "src/main.rs"

[[bench]]
name = "benchmark"
harness = false

[lib]
name = "mlx_lm_rs"
path = "src/lib.rs"

[dependencies]
mlx-rs = { version = "0.25", features = ["metal", "accelerate"] }
mlx-sys = "0.2"
tokenizers = "0.23"
hf-hub = { version = "0.5", features = ["ureq"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
minijinja = { version = "2", features = ["loader"] }
minijinja-contrib = { version = "2", features = ["pycompat"] }
clap = { version = "4", features = ["derive"] }
thiserror = "2"
anyhow = "1"

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }

[profile.release]
opt-level = 3
lto = "thin"

[profile.dev]
opt-level = 1
